[package]
name = "periscope"
version = "0.1.0"
authors = ["Raghuvir Kasturi <raghuvir.kasturi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
